style.css
/* ... */
#our-projects .card{
    display: grid;
    background: #FFFFFF;
    border: 1px solid #F4E7F3;
    box-sizing: border-box;
    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.12);
    border-radius: 3px;
    width: 278px;
    height: 385px;
}
#our-projects .card .card-image{
    align-items: center;
    justify-items: center;
    display: grid;
    height: 200px;
}
#our-projects .card .card-text{
    background: rgba(234,234,234,0.5);
    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.08);
    border-radius: 3px;
    font-family: Noto Sans SC;
    height: 185px;
    font-style: normal;
    font-weight: bold;
    font-size: 14px;
    line-height: 10px;
    text-transform: uppercase;
    color: #222222;
    height: 160px;
    padding:21px 10px 0px 22px;

}
#our-projects .card .card-text h5{
    font-size: 18px;
    line-height: 26px;   
    color: #333333;
    margin:0;
}
#our-projects .cards{
    display: grid;
}
#our-projects .group-1{
    grid-row: 1;
    margin: 10px;
}
#our-projects .group-2{
    grid-row: 2;
    margin: 10px;
}
#our-projects .card-p-1{
    display: inline-block;
    vertical-align: top;
}
#our-projects .card-p-2{
    display: inline-block;
    vertical-align: top;
}
#contact-us h2:first-child{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 70px;
    margin-top: 37px;
    text-align: center;
    color: #272727;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 3px 0px 0px rgba(255, 33, 33, 0.15), -3px 0px 0px rgba(27, 100, 209, 0.16);
}
#contact-us h6{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 21px;
    line-height: 30px;
    text-align: center;
    margin: 0px 0px 29px 0px;
    text-transform: uppercase;
    color: #7B7581;
}
#contact-us iframe{
    width: 100%;
    height: 631px;
}
#contact-us #block{
    width: 476px;
    height: 503px;
    background: rgba(255, 255, 255, 0.9);
    backdrop-filter: blur(8px);
    z-index: 20;
}
#contact-us #text hr{
    width: 100%;
    height: 0px;
    border: 1px solid #DCDCDC;
}
#contact-us #text{
    padding: 37px 49px;    
}
#contact-us #back{
    width: 100%;
    height: 22px;
    background: linear-gradient(252.83deg, rgba(249, 32, 32, 0.3328) 4.85%, rgba(43, 102, 255, 0.2964) 98.69%), #272727;
    background-blend-mode: color, normal;
    position: relative;
    display: grid;
    align-self: flex-end;
}
#contact-us #content{
    display: grid;
}
#contact-us #content #block{
    grid-row: 1;
    grid-column: 1;
    margin: 0% 10%;
    align-self: center;
    justify-self: end;
    display: grid;
}
#contact-us #content #block h2{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;
    text-transform: uppercase;

    color: #555555;
}
#contact-us #content #block h1{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 24px;
    line-height: 35px;
    text-transform: uppercase;
    
    color: #333333;
}
#contact-us #content #block h3{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;
    /* identical to box height */
    color: #333333;
    text-transform: uppercase;
}
#contact-us #content #block h4{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;
    /* identical to box height */
    
    
    color: #333333;
    
}
#contact-us #content #map{
    grid-row: 1;
    grid-column: 1;
    height: 631px;
}
footer{
    display: grid;
    background: linear-gradient(252.83deg, rgba(249, 32, 32, 0.3328) 4.85%, rgba(43, 102, 255, 0.2964) 98.69%), #272727;
    background-blend-mode: color, normal;
    padding: 2% 10%;
}
footer #qr-code{
    width: 296px;
    height: 296px;
    border-radius: 50%;
    background: rgba(0, 0,0,0.1);
    display: grid;
    grid-column: 2;
    grid-row: 1;
    justify-self: center;
    align-self: center;
    justify-items: center;
    align-items: center;
}
footer #qr-code div{
    margin-bottom: 26px;
}
footer #qr-code div p{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;
    text-align: center;
    margin-bottom: 18px;
    color: #FFFFFF;
}
footer #our-contacts{
    grid-column: 1;
    grid-row: 1;
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;
    color: #DEDEDE;
    margin: 0;

}
footer #our-contacts img{
    width: 165px;
    height: 41px;
    margin-top:37px;
}
footer p{
    margin: 0;
}
footer #our-contacts h5{
    line-height: 31px;
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    color: #DEDEDE;
    margin: 0;
}
footer #our-contacts h6{
    margin:0px 0px 11px 0px;
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;

    color: #DEDEDE;
}
footer #our-contacts p{
    margin: 4.5px 0px;
}
footer #our-contacts hr{
    width: 30px;
    height: 0px;
    opacity: 0.5;
    border: 2px solid #CCCCCC;
    margin: 22px 0px;
    align-self: center;
}
footer #info{
    grid-column: 3;
    grid-row: 1;
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 36px;
    text-align: right;

    color: #FFFFFF;
}
h2{
    margin: 39px 0px 0px 0px;
}
/* ... */

